// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Samp checkGrammar 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkGrammar 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkGrammar 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkGrammar 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkHighlight 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkHighlight 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkHighlight 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkHighlight 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkSpaces 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkSpaces 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkSpaces 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp checkSpaces 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp className 1`] = `
<samp
  className="uu5-bricks-samp my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp content 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</samp>
`;

exports[`UU5.Bricks.Samp content 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</samp>
`;

exports[`UU5.Bricks.Samp content 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</samp>
`;

exports[`UU5.Bricks.Samp content 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</samp>
`;

exports[`UU5.Bricks.Samp controlled 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp controlled 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp controlled 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp controlled 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp default props 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp disabled 1`] = `
<samp
  className="uu5-bricks-samp uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</samp>
`;

exports[`UU5.Bricks.Samp disabled 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp disabled 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp disabled 4`] = `
<samp
  className="uu5-bricks-samp uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</samp>
`;

exports[`UU5.Bricks.Samp docKit examples UU5.Bricks.Samp should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <P
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
     Computer said: 
    <Samp
      className={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID03"
      ignoreInnerHTML={false}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      I will kill all humanity! Now!
    </Samp>
  </P>
</div>
`;

exports[`UU5.Bricks.Samp dynamic 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp dynamic 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp dynamic 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp dynamic 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp hidden 1`] = `
<samp
  className="uu5-bricks-samp uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp hidden 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp hidden 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp hidden 4`] = `
<samp
  className="uu5-bricks-samp uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp id 1`] = `
<samp
  className="uu5-bricks-samp"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp ignoreHTML 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp mainAttrs 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp name 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp noIndex 1`] = `
<samp
  className="uu5-bricks-samp uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp noIndex 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp noIndex 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp noIndex 4`] = `
<samp
  className="uu5-bricks-samp uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp selected 1`] = `
<samp
  className="uu5-bricks-samp uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp selected 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp selected 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp selected 4`] = `
<samp
  className="uu5-bricks-samp uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp style 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Samp style 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Samp style 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Samp style 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Samp textCorrector 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp textCorrector 2`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp textCorrector 3`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp textCorrector 4`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Samp tooltip 1`] = `
<samp
  className="uu5-bricks-samp"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
